tests/NormalTests/paczka1/fuzzy1/41897444.err
Error in line 2: S614 S645 54,4
Error in line 1: SrSZGPn9 S645 78,6
Error in line 3: S614 A156 28,5
Error in line 9: 8jNP A156 15,6
Error in line 15: gYv6BlgbKR S614 87,5
Error in line 28: 8jNP S614 39,1
